# others

hanzi_demo/: .gitignore  Cargo.toml  README.md  build.rs
hanzi_demo/.cargo/: config.toml
hanzi_demo/src/: cli.rs  font.rs  main.rs  snake.rs  text.rs
rust_uart/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
rust_uart/.cargo/: config.toml
rust_uart/scripts/: postbuild.sh
rust_uart/src/: main.rs
snake_lcd/: .ecos-project  logo.h  main.c  main.h  menu.h  over.h
snake_lcd/configs/config/: auto.conf.cmd
snake_shell/: main.c  main.h
snake_shell/configs/: .config
snake_shell/configs/config/: auto.conf
